# ifc-fm-checker

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
ifc_fm_checker/: __init__.py  cli.py  config.py  runner.py  utils.py
ifc_fm_checker/checks/: __init__.py  check_assets.py  check_clashes.py  check_cobie.py  check_ids.py  check_naming.py  check_psets.py  check_spatial.py  check_systems.py
ifc_fm_checker/report/: __init__.py  html_report.py
tests/: test_checker.py
